--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ packages = [{include = "python_2610_m1_lessons"}]
 python = "^3.10"
 pandas = "^1.5.2"
 openpyxl = "^3.0.10"
+pydantic = "^1.10.2"
+requests = "^2.28.1"
 
 
 [build-system]
