--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ pandas = "^1.5.2"
 openpyxl = "^3.0.10"
 pydantic = "^1.10.2"
 requests = "^2.28.1"
+beautifulsoup4 = "^4.11.1"
+lxml = "^4.9.2"
 
 
 [build-system]
