--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ pydantic = "^1.10.2"
 requests = "^2.28.1"
 beautifulsoup4 = "^4.11.1"
 lxml = "^4.9.2"
+psycopg2 = "^2.9.5"
+sqlalchemy = "^1.4.46"
 
 
 [build-system]
